CI images update

--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-07-13 01:22:24
+lastsearch = 2024-07-13 05:52:11
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -27,9 +27,9 @@ title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=chiếu trúc
 
 [www.diepxuan.com]
-match = 100.0%%
-title = Chiếu trúc quế lâm loại 2 18
-url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
+match = 28.6%%
+title = Chiếu trúc Quế Lâm II 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-truc-que-lam-ii-180x200.html
 
 [www.lazada.vn]
 match = 70.4%%
