--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-13 03:50:59
+lastsearch = 2024-07-13 05:44:17
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = -15.0%%
-title = Christina Mangurian, MD, MAS
-url = https://profiles.ucsf.edu/christina.mangurian
+match = -45.0%%
+title = Nicholas Butowski, MD - UCSF Profiles
+url = https://profiles.ucsf.edu/nicholas.butowski
 
 [cityofclovis.com]
 match = -65.0%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q6.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -150.0%%
-title = A Comprehensive Review of Health Benefits of Qigong and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3085832/
+match = -120.0%%
+title = Physical fitness training for stroke patients - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6464717/
 
 [www.energy.gov]
 match = -95.0%%
@@ -187,9 +187,9 @@ title = Flight Number - Airborne Sensor Facility - NASA
 url = https://asapdata.arc.nasa.gov/sensors/fsrs/94152_fsr.pdf
 
 [profiles.ucsd.edu]
-match = -41.7%%
-title = Jack Gilbert
-url = https://profiles.ucsd.edu/jack.gilbert
+match = -63.6%%
+title = Sameer Shah
+url = https://profiles.ucsd.edu/sameer.shah
 
 [profiles.ucdavis.edu]
 match = 0.0%%
@@ -355,4 +355,9 @@ url = https://www.etecownersgroup.com/post/skeg-guardprotectorshield-for-2006-90
 match = -100.0%%
 title = A CASE STUDY OF THE BIOI OGICAL INVASIONS OF THE
 url = https://repository.library.noaa.gov/view/noaa/40918/noaa_40918_DS1.pdf
+
+[www.ipcc.ch]
+match = -155.0%%
+title = Chapter 5: Demand, services and social aspects of mitigation
+url = https://www.ipcc.ch/report/ar6/wg3/chapter/chapter-5/
 
