--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-13 04:49:51
+lastsearch = 2024-07-13 05:48:23
 
 [everon.online]
-match = -32.4%%
-title = 4 – Everon Tân Mai | Tổng Đại Lý Chăn Ga Gối Đệm Everon ...
-url = https://everon.online/blogs/video/4
+match = 50.0%%
+title = Bộ Ga Chun Chần Everon Bốn Mùa ...
+url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [www.everonvn.vn]
 match = -32.4%%
