--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-13 02:12:06
+lastsearch = 2024-07-13 05:46:02
 
 [demxanh.com]
 match = 0.0%%
@@ -27,8 +27,8 @@ title = Tìm Hiểu Kích Thước Giường Ngủ Các Loại
 url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 
 [ru9.vn]
-match = -86.4%%
-title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
+match = -90.9%%
+title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [cafeland.vn]
@@ -42,8 +42,8 @@ title = Điệp Xuân Thảm giường nỉ 140x190
 url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [shopee.vn]
-match = -54.5%%
-title = GIƯỜNG SÔ PHA ĐA NĂNG THÔNG MINH GẤP GỌN ...
+match = -81.8%%
+title = GIƯỜNG SÔ PHA ĐA NĂNG THÔNG MINH GẤP GỌN, SOFA ...
 url = https://shopee.vn/GIƯỜNG-SÔ-PHA-ĐA-NĂNG-THÔNG-MINH-GẤP-GỌN-SOFA-GIƯỜNG-GẤP-LẠI-THÀNH-GHẾ-i.795208755.19125639155
 
 [everonhanquoc.vn]
