--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-13 04:44:45
+lastsearch = 2024-07-13 06:13:44
 
 [everon.online]
 match = 19.2%%
@@ -17,9 +17,9 @@ title = Phân chậm tan túi lọc NT 1602.HK3
 url = https://www.anbio.vn/products/phan-cham-tan-tui-loc-hvp-1602-hk3
 
 [m.facebook.com]
-match = -34.6%%
-title = J2TEAM Community | Lý do lão hạc bán cậu vàng
-url = https://m.facebook.com/groups/j2team.community/posts/2417508628581243/
+match = -53.8%%
+title = J2TEAM Community | Logo của bác Google thú vị thật
+url = https://m.facebook.com/groups/j2team.community/posts/2420255644973208/
 
 [www.changagoidemeveron.vn]
 match = -3.8%%
