--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-13 05:14:00
+lastsearch = 2024-07-13 06:18:23
 
 [www.mantubung.com]
 match = -100.0%%
@@ -42,9 +42,9 @@ title = mùng chụp tự bung gấp gọn cao cấp easy dream
 url = https://easydream.vn/man-mung-chup-tu-bung-gap-gon-danh-cho-nguoi-lon-134-15.html
 
 [www.mungtubung.com]
-match = -116.7%%
-title = Mùng Tự Bung Bảo Lộc 1m8 x 2m Loại 2 Cửa Cao Cấp ...
-url = https://www.mungtubung.com/mung-tu-bung-1m8-loai-2-cua.html
+match = -105.6%%
+title = Mùng Chụp Chống Muỗi Trẻ Em Tự Bung Cao Cấp Sản ...
+url = https://www.mungtubung.com/mung-tre-em-tu-bung-cao-cap-77162.html
 
 [mungmocmien.com]
 match = -111.1%%
