--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-13 04:34:09
+lastsearch = 2024-07-13 06:13:13
 
 [erado.vn]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = Tham trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=tham trải giường
 
 [noithathoaphat360.com]
-match = -10.0%%
-title = Combo bộ giường tủ phòng ngủ 402-18
-url = https://noithathoaphat360.com/combo-bo-giuong-tu-phong-ngu-40218-p35700585.html
+match = -60.0%%
+title = Giường ngủ GN301-18 - Noi That Hoa Phat
+url = http://noithathoaphat360.com/giuong-ngu-gn30118-p7654247.html
 
 [noithathofaco.net]
 match = -110.0%%
