--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-13 03:45:28
+lastsearch = 2024-07-13 06:13:25
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,14 +12,14 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -268.8%%
-title = tw: cw: needles 💉🩸 kitty bites / angel bites at home pt 2! i am a ...
-url = https://www.tiktok.com/@todorokikokoroki/video/7237295177210088747
+match = -6.2%%
+title = Huda Beauty Lip Stain
+url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
 
 [www.diepxuan.com]
-match = -162.5%%
-title = Túi Warmdream 2 gấp 180x200x12 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-2-gap-180x200x12.html
+match = -150.0%%
+title = Điệp Xuân Nệm bông - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-bong.html?p=2
 
 [digitalmaine.com]
 match = -75.0%%
