--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-13 03:16:22
+lastsearch = 2024-07-13 06:32:17
 
 [tiki.vn]
 match = 16.0%%
@@ -12,9 +12,9 @@ title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
 url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=10766238
 
 [www.tiktok.com]
-match = -80.0%%
-title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Loan ...
-url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
+match = 0.0%%
+title = Cách Xem Lịch Chiếu Film Tại Taiwan
+url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [shopee.vn]
 match = -8.0%%
@@ -27,9 +27,9 @@ title = Lừa đảo xuất khẩu lao động, người đàn ông Đài Loan l
 url = https://congly.vn/lua-dao-xuat-khau-lao-dong-nguoi-dan-ong-dai-loan-linh-12-nam-tu-399654.html
 
 [www.facebook.com]
-match = 12.0%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -84.0%%
+title = Đài Loan nằm dọc theo Vành đai lửa Thái Bình Dương, trung ...
+url = https://www.facebook.com/ptsvietnamesenews/videos/đài-loan-nằm-dọc-theo-vành-đai-lửa-thái-bình-dương-trung-bình-mỗi-năm-có-khoảng-/1955051404897312/
 
 [vi.wikipedia.org]
 match = 6.7%%
@@ -225,4 +225,14 @@ url = https://intertour.vn/thoi-tiet-dai-loan-thang-12-ra-sao-can-luu-y-gi/
 match = -56.0%%
 title = Thống đốc Texas Abbott gặp Tổng thống Đài Loan trong ...
 url = https://www.epochtimesviet.com/thong-doc-texas-abbott-gap-tong-thong-dai-loan-trong-chuyen-cong-du-dong-a_480909.html
+
+[www.luavietours.com]
+match = -36.0%%
+title = ĐÀI LOAN 5N4Đ | ĐÀI BẮC – ĐÀI TRUNG – CAO HÙNG
+url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/
+
+[www.ustraveldocs.com]
+match = -76.0%%
+title = Nộp đơn xin Visa Hoa Kỳ | Các Câu hỏi Thường gặp (FAQ)
+url = https://www.ustraveldocs.com/vn_vn/vn-gen-faq.asp
 
