CI images update

--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-13 04:45:40
+lastsearch = 2024-07-13 06:52:35
 
 [en.wikipedia.org]
-match = -10.0%%
-title = Donghak Peasant Revolution
-url = https://en.wikipedia.org/wiki/Donghak_Peasant_Revolution
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -132,9 +132,9 @@ title =
 url = https://www.gn.go.kr/entour/sub05_04_08.do
 
 [www.reddit.com]
-match = -150.0%%
-title = Why my teacher told us that 'eighteen' is a bad word in ...
-url = https://www.reddit.com/r/Korean/comments/12esgv/why_my_teacher_told_us_that_eighteen_is_a_bad/
+match = -85.0%%
+title = Legal adult age in Korea is 19, not 18 : r/kpoprants
+url = https://www.reddit.com/r/kpoprants/comments/x4x0uh/legal_adult_age_in_korea_is_19_not_18/
 
 [timesofindia.indiatimes.com]
 match = -115.0%%
@@ -337,9 +337,9 @@ title = Ratios Cedears
 url = https://www.gabrielmartin.yt/tools/ratio
 
 [www.nti.org]
-match = -25.0%%
-title = North Korea Chemical Facilities
-url = https://www.nti.org/analysis/articles/north-korea-chemical-facilities/
+match = -15.0%%
+title = North Korea Chemical Overview
+url = https://www.nti.org/analysis/articles/north-korea-chemical/
 
 [10mag.com]
 match = 0.0%%
