--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-13 05:51:09
+lastsearch = 2024-07-13 06:46:49
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftleqJHrp5&sig=ACfU3U3YYhsh32zqa6O-STw1EB3f0HbOfg&hl=en&sa=X&ved=2ahUKEwjUrrG5y6KHAxVmg4kEHRTeC2EQ6AF6BAgWEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftleqJLlj5&sig=ACfU3U3gJWy0T8xwfuA1ZwtQs0zQaPE3yw&hl=en&sa=X&ved=2ahUKEwiD9ITy16KHAxWYEkQIHfZADw4Q6AF6BAg3EAM
 
 [www.phillyvoice.com]
 match = 0.0%%
