--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-13 04:31:47
+lastsearch = 2024-07-13 06:44:07
 
 [shopee.vn]
-match = -57.1%%
-title = Thảm nhung trải sàn trải giường 1.8x2m và 1.6x2m
-url = https://shopee.vn/Thảm-nhung-trải-sàn-trải-giường-1.8x2m-và-1.6x2m-2x2.2m-hàng-loại-1-thảm-tấm-đủ-màu-i.6844632.773184193
+match = -52.4%%
+title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường
 
 [khosibaclieu.com]
 match = -9.5%%
@@ -135,4 +135,9 @@ url = https://cafeland.vn/xu-huong/5-loai-tham-trai-giuong-hot-nhat-hien-nay-112
 match = -61.9%%
 title = Top 15+ Mẫu Tủ Đầu Giường Đẹp & Báo Giá Mới Nhất
 url = https://smartdecor.vn/mau-tu-dau-giuong-dep/
+
+[decor.lanha.vn]
+match = 23.8%%
+title = Giường bọc nệm - LND 15
+url = https://decor.lanha.vn/san-pham/giuong-boc-nem-lnd-15/
 
