CI images update

--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-12 22:45:25
+lastsearch = 2024-07-13 08:02:46
 
 [www.tui.co.uk]
-match = -233.3%%
-title = Repositional and Transatlantic Cruises | Marella Cruises
-url = https://www.tui.co.uk/cruise/info/repositioning-cruises
+match = -153.3%%
+title = Where We Fly | Flights with TUI 2024 / ...
+url = https://www.tui.co.uk/flight/where-we-fly
 
 [cruisepanda.com]
 match = -213.3%%
 title = 14 Night Asia Cruise On Mein Schiff 5 Departing From ...
-url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-278
+url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-184
 
 [www.changiairport.com]
 match = -213.3%%
@@ -132,7 +132,7 @@ title =
 url = https://www.birminghamairport.co.uk/media-information/news/2023/12/tui-first-passenger-flight-to-singapore-takes-off-from-birmingham-airport/
 
 [www.skyscanner.net]
-match = -53.3%%
-title = Book TUI Flights to Singapore Changi
-url = https://www.skyscanner.net/flights/airline-flights-to-airport/sin/tui-tom/cheap-flights-with-tui-tom-flights-to-singapore-changi
+match = -20.0%%
+title = Book TUI Flights to Singapore
+url = https://www.skyscanner.net/flights/airline-flights-to-city/sins/tui-tom/cheap-flights-with-tui-tom-flights-to-singapore
 
