--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-13 06:52:53
+lastsearch = 2024-07-13 07:56:47
 
 [www.instagram.com]
-match = -169.2%%
-title = Embarking on a new journey, @Dior is set ...
-url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
+match = -161.5%%
+title = (@katrinacyt) • Instagram photos and videos
+url = https://www.instagram.com/katrinacyt/
 
 [hk.linkedin.com]
-match = -76.9%%
-title = Fanny Chan - Christian Dior Couture
-url = https://hk.linkedin.com/in/fanny-chan-938952bb
+match = -100.0%%
+title = Hoi Yee Ng - Christian Dior Couture
+url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
 match = -238.5%%
@@ -107,9 +107,9 @@ title = WAI SENG CHAN - Senior Sales Associate - Christian Dior ...
 url = https://my.linkedin.com/in/wai-seng-chan-791010270
 
 [www.dior.com]
-match = -246.2%%
-title = Dior Boutique | China | Xi'an | 261 Chang'An Road North
-url = https://www.dior.com/fashion/stores/en_us/china/xian/261-changan-road-north
+match = -30.8%%
+title = Dior official website
+url = https://www.dior.com/en_int/fashion
 
 [www.gettyimages.fr]
 match = -253.8%%
