--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-13 06:28:09
+lastsearch = 2024-07-13 07:56:23
 
 [eva.vn]
 match = -136.8%%
@@ -47,9 +47,9 @@ title = Địa chí Tiền Giang - Volume 1 - Page 334 - Google Books Result
 url = https://books.google.com/books?id=bqQMAQAAMAAJ&pg=PA334&lpg=PA334&dq=chieu+cay+moc+hoa16&source=bl&ots=31InjLlfRr&sig=ACfU3U0-cNmHhi7kR4nvfNqyw4C-ECrAvg&hl=en&sa=X&ved=2ahUKEwj7neeEt4yHAxWTJzQIHZJSC7oQ6AF6BAgdEAM
 
 [www.diepxuan.com]
-match = 5.3%%
-title = Chiếu cây mộc hoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html
+match = 0.0%%
+title = Chiếu cây mộc hoa 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-moc-hoa-180x200.html
 
 [mietistudio.com]
 match = -131.6%%
@@ -62,9 +62,9 @@ title = Cây móc len hàng chính hãng, giao nhanh - Tháng 7, 2024
 url = https://tiki.vn/search?q=cây móc len
 
 [danviet.vn]
-match = -168.4%%
-title = 6 cây cảnh tuổi thọ rất cao, càng già càng có giá, hoa lộng ...
-url = https://danviet.vn/6-cay-canh-tuoi-tho-rat-cao-cang-gia-cang-co-gia-hoa-long-lay-hut-tai-don-loc-20220309232804516.htm
+match = -126.3%%
+title = Cây cảnh như máy hút khói, khử mùi, trồng trong nhà ...
+url = https://danviet.vn/cay-canh-nhu-may-hut-khoi-khu-mui-trong-trong-nha-khong-khi-sach-bong-con-chieu-may-ruoc-loc-20240704031213471.htm
 
 [www.vinmec.com]
 match = -21.1%%
