--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-13 04:46:35
+lastsearch = 2024-07-13 07:57:32
 
 [www.gov.uk]
 match = -200.0%%
@@ -840,4 +840,9 @@ url = https://www.boston25news.com/homepage
 match = -166.7%%
 title = Minnesota Court Records Online (MCRO): Home Page
 url = https://publicaccess.courts.state.mn.us/
+
+[thepowerrank.com]
+match = 0.0%%
+title = 
+url = https://thepowerrank.com/world-football-soccer/
 
