--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-13 02:47:15
+lastsearch = 2024-07-13 08:04:42
 
 [shopee.vn]
 match = -171.4%%
@@ -17,9 +17,9 @@ title = {NEW2021} Mùng Ngủ METTA Tự Bung Thông Minh - 2 ...
 url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2021-mung-ngu-metta-tu-bung-thong-minh-2-met-vuong-mngu2m-vuong-xam-bh-18-thang.html
 
 [tiki.vn]
-match = -221.4%%
-title = Màn chụp tự bung đỉnh vuông, giá xưởng, hàng việt nam ...
-url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465914
+match = -207.1%%
+title = Màm tự bung em bé 80cm x 180cm hàng chính hãng, giao ...
+url = https://tiki.vn/search?q=màm tự bung em bé 80cm x 180cm
 
 [manthutrang.com]
 match = -200.0%%
