--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-13 06:32:42
+lastsearch = 2024-07-13 09:07:55
 
 [hoa18.com]
-match = -84.2%%
-title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
-url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
+match = -173.7%%
+title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài lộc trong ...
+url = https://hoa18.com/thong-tin/tiet-lo-y-nghia-phong-thuy-cua-nu-tam-xuan-hut-tai-loc-trong-nam-moi
 
 [www.youtube.com]
 match = -105.3%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -147.4%%
-title = Mỹ: Nhiều trường công lập hạn chế học sinh sử dụng điện ...
-url = https://trithucvn.co/the-gioi/my-nhieu-truong-cong-lap-han-che-hoc-sinh-su-dung-dien-thoai-di-dong.html
+match = 15.8%%
+title = Từ KIST mơ tới VIST
+url = https://trithucvn.co/van-hoa/tu-kist-mo-toi-vist.html
 
 [bptv.vn]
 match = -57.9%%
