--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-07-12 22:32:19
+lastsearch = 2024-07-13 09:07:20
 
 [shopee.vn]
-match = -81.8%%
-title = Chiếu nhựa gấp gọn size 2m ×3m chiếu ăn cơm hàng đẹp ...
-url = https://shopee.vn/Chiếu-nhựa-gấp-gọn-size-2m-×3m-chiếu-ăn-cơm-hàng-đẹp-nhiều-màu-i.114438421.4732248740
+match = 9.1%%
+title = Chiếu cói 3m Đẹp Sang Chuẩn xịn
+url = https://shopee.vn/Chiếu-cói-3m-Đẹp-Sang-Chuẩn-xịn-i.18845103.22331826526
 
 [www.facebook.com]
-match = -4.5%%
-title = Phòng Khám Nhi Tâm An | Thai Binh
-url = https://www.facebook.com/phongkhamnhitamandonghung/?locale=he_IL
+match = 36.4%%
+title = Chiếu Cói Thân Vui Thái Bình
+url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
 
 [m.facebook.com]
 match = -36.4%%
@@ -140,4 +140,9 @@ url = https://nhadat24h.net/ban-nha-trong-ngo-tren-3m-pham-van-chieu/chu-gap-ban
 match = -157.1%%
 title = CONG BO
 url = https://kinhtexaydung.gov.vn/wp-content/uploads/2020/12/CV_1064-CBG-T6-2020.pdf
+
+[www.diepxuan.com]
+match = 13.6%%
+title = Chiếu gấp Thái Bình 180x400 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x400.html
 
