CI images update

--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-13 04:28:05
+lastsearch = 2024-07-13 09:50:57
 
 [shopee.vn]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = CHIẾU ĐIỀU HÒA CAO SU NON COCO ĐẶC BIỆT 2024
 url = https://cungnhaulamgiau.vn/chieu-dieu-hoa-cao-su-non-coco-dac-biet-2024_p6524
 
 [tiki.vn]
-match = 16.7%%
-title = Chiếu điều hòa có mát không? Review 10 ...
-url = https://tiki.vn/blog/chieu-dieu-hoa/
+match = 8.3%%
+title = Chiếu điều hòa hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu điều hòa
 
 [xn--nekiovitnam-y69e.vn]
 match = -20.8%%
@@ -67,9 +67,9 @@ title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
 url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [foreverbedding.net]
-match = 37.5%%
-title = Chiếu điều hòa - Forever Bedding
-url = https://foreverbedding.net/chieu-dieu-hoa
+match = -20.8%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [joliefam.vn]
 match = -37.5%%
