--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-13 09:36:26
+lastsearch = 2024-07-13 10:16:31
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = 6.5%%
-title = chiếu trúc hạt quế lâm hoa m5 [Được kiểm hàng] 29675422
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-hoa-m5-duo-c-kie-m-ha-ng-29675422-116802908.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1715904000322_undefined_-1_cateLvl2_0_90_23_-1
+match = 9.7%%
+title = Chiếu Trúc Hạt Loại Một Giá Cực Rẻ Nên Mua Ở Đâu
+url = https://www.sendo.vn/chieu-truc-hat.htm
 
 [www.lazada.vn]
 match = 16.1%%
