--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-13 09:08:29
+lastsearch = 2024-07-13 10:13:28
 
 [zhangbrickshop.com]
 match = -133.3
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -26.7%%
+title = Du học Hàn Quốc - ANIDO
+url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
 
 [hoc247.vn]
 match = -213.3%%
@@ -315,4 +315,14 @@ url = https://hcmyu.hpu2.edu.vn/cau-lac-bo-bong-da-sang-len-giang-duong--chieu-r
 match = -220.0%%
 title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
 url = https://concung.com/thoi-trang/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
+
+[bocongan.gov.vn]
+match = -246.7%%
+title = Phát động thi tuyển “Phương án kiến trúc cổng, tường rào ...
+url = https://bocongan.gov.vn/tin-tuc-su-kien/hoat-dong-cua-luc-luong-cong-an/tin-hoat-dong-cua-bo/phat-dong-thi-tuyen-phuong-an-kien-truc-cong-tuong-rao-ap-dung-trong-cong-an-nhan-dan-phu-hop-vung-mien-d2-t40106.html
+
+[www.gjust.ac.in]
+match = -266.7%%
+title = Guru Jambheshwar University of Science & Technology, Hisar ...
+url = https://www.gjust.ac.in/
 
