--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-13 00:17:45
+lastsearch = 2024-07-13 10:19:59
 
 [www.diepxuan.com]
 match = 10.7%%
@@ -27,9 +27,9 @@ title = 常識科
 url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpageid=44&cpmid=176&rurl=https://xn--b1aecnalzhcpg.xn--p1ai/9825461fe43y
 
 [demxanh.com]
-match = -3.6%%
-title = Ga gối Sông Hồng Basic cotton BC23079
-url = https://demxanh.com/ga-goi-song-hong-basic-cotton-bc23079.html
+match = 7.1%%
+title = Ga gối Sông Hồng basic TC BT23078
+url = https://demxanh.com/ga-goi-song-hong-basic-tc-bt23078.html
 
 [stevematuro.com]
 match = -39.3%%
