--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-13 06:53:05
+lastsearch = 2024-07-13 10:19:38
 
 [xoptraisan.info]
-match = -141.2%%
-title = Thảm nỉ ghép Tường Lâm 30x30 cao cấp chính hãng giá ...
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-30x30
+match = -147.1%%
+title = Thảm nỉ ghép Tường Lâm cao cấp khổ 40x40cm siêu giảm giá
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-40x40
 
 [www.diepxuan.com]
 match = 100.0%%
