CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-13 04:18:56
+lastsearch = 2024-07-13 10:47:55
 
 [scholar.google.com]
 match = -43.8%%
@@ -460,4 +460,9 @@ url = https://znews.vn/co-nen-dan-nhan-18-voi-mot-thoang-ta-ruc-ro-o-nhan-gian-p
 match = -125.0%%
 title = Bác sĩ, Nha sĩ, Phòng khám Y tế & Nhà thuốc
 url = https://chas.org/vi/events/list/page/18/?tribe-bar-date=2021-08-17
+
+[thuvienphapluat.vn]
+match = -143.8%%
+title = HỢP TÁC XÃ TIỂU THỦ CÔNG NGHIỆP CHIẾU LÁC TIÊN ...
+url = https://thuvienphapluat.vn/ma-so-thue/hop-tac-xa-tieu-thu-cong-nghiep-chieu-lac-tien-tien-mst-2200275661.html
 
