--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-13 06:44:28
+lastsearch = 2024-07-13 10:44:49
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Duy Long - Chàng trai xanh lá quyết theo đuổi nữ chính từ ..
 url = https://www.facebook.com/NguoiAyLaAi.VieChannel/videos/duy-long-chàng-trai-xanh-lá-quyết-theo-đuổi-nữ-chính-từ-show-ra-đời-thật-người-ấ/425027899585078/
 
 [www.youtube.com]
-match = -285.7%%
-title = Cập nhật giá TIVI dưới 10 triệu trong tháng 7 tại Điện máy XANH
-url = https://www.youtube.com/watch?v=j_AHP98h1wM
+match = -100.0%%
+title = Resident Evil - Chris 10: New guns!
+url = https://www.youtube.com/watch?v=PeT3ic6LphU
 
 [www.reddit.com]
 match = -64.3%%
@@ -32,8 +32,8 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -7.1%%
-title = Explore my Options
+match = -50.0%%
+title = Explore my Options | USCIS
 url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
@@ -82,9 +82,9 @@ title = 10 Evidence-Based Benefits of Green Tea
 url = https://www.healthline.com/nutrition/top-10-evidence-based-health-benefits-of-green-tea
 
 [en.wikipedia.org]
-match = 7.1%%
-title = Little green men
-url = https://en.wikipedia.org/wiki/Little_green_men
+match = -20.0%%
+title = Green card
+url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
 match = 0.0%%
