--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-13 09:05:38
+lastsearch = 2024-07-13 10:45:42
 
 [shopee.vn]
 match = -3.6%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = -7.1%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 21.4%%
+title = Sử dụng chiếu điều hòa có tốt hay không?
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [tiki.vn]
 match = 28.6%%
@@ -32,9 +32,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [sieuthidem.vn]
-match = 53.6%%
-title = Chiếu điều hoà Tencel - Hà Nội
-url = https://sieuthidem.vn/product-category/chan-ga-goi/chieu-dieu-hoa-tencel/
+match = 32.1%%
+title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [kyoryo.vn]
 match = -35.7%%
