--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-13 06:48:52
+lastsearch = 2024-07-13 10:51:58
 
 [shopee.vn]
 match = -216.7%%
@@ -42,9 +42,9 @@ title = GHẾ NỆM DỰA CAO CẤP 4000-913
 url = https://thinhgo.com/products/ghe-nem-dua-cao-cap-4000-913
 
 [tiki.vn]
-match = -200.0%%
-title = Nệm ghế,Thảm ghế gỗ loại 1m7x 55cm mẫu màu nâu
-url = https://tiki.vn/nem-ghe-tham-ghe-go-loai-1m7x-55cm-mau-mau-nau-p89638643.html?spid=155022353
+match = -241.7%%
+title = Thảm ghế, nệm ghế gỗ kích thước 2m x 60cm các màu nâu
+url = https://tiki.vn/tham-ghe-nem-ghe-go-kich-thuoc-2m-x-60cm-cac-mau-nau-p89638136.html
 
 [suongtuyet.com]
 match = -125.0%%
@@ -58,8 +58,8 @@ url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
 match = -266.7%%
-title = Thảm ghế 2m2 x 55cm nệm lót ghế gỗ hoàng gia đỏ kích ...
-url = https://www.lazada.vn/products/tham-ghe-2m2-x-55cm-nem-lot-ghe-go-hoang-gia-do-kich-thuoc-co-dai-2m2-x-55cm-gom-1-tam-dai-va-2-tam-ngan-i902914335.html
+title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có viền
+url = https://www.lazada.vn/products/tham-ghe-go-nem-ghe-nem-sofa-2m-x-55-cm-mau-do-co-vien-i916236446.html
 
 [vn.my-best.com]
 match = -233.3%%
@@ -130,4 +130,9 @@ url = https://www.youtube.com/watch?v=ehwutFRh4HI
 match = -300.0%%
 title = Mẫu Nệm Lót Ghế Gỗ Đẹp, Xịn, Hàng Chất Lượng, Giá Rẻ ...
 url = https://anmoc.vn/blogs/news/nem-lot-ghe-go
+
+[dienmaycholon.com]
+match = -291.7%%
+title = Máy Giặt Sofa, Nệm, Thảm Cầm Tay Uwant B100 giá rẻ, ...
+url = https://dienmaycholon.com/may-hut-bui-robot-hut-bui/may-giat-sofa-nem-tham-cam-tay-uwant-b100
 
