--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-13 06:13:02
+lastsearch = 2024-07-13 10:47:11
 
 [erado.vn]
 match = 0.0%%
@@ -72,9 +72,9 @@ title = Thảm trải chân giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải chân giường
 
 [noithattamviet.net]
-match = -10.0%%
-title = Giường ngủ gỗ công nghiệp GCN-14
-url = https://noithattamviet.net/giuong-ngu-go-cong-nghiep-gcn-14
+match = -30.0%%
+title = Giường bọc nhung gỗ công nghiệp GB-14
+url = https://noithattamviet.net/giuong-boc-nhung-go-cong-nghiep-gb-14
 
 [nemphuoclong.vn]
 match = -55.0%%
