--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-13 10:49:02
+lastsearch = 2024-07-13 11:17:41
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,8 +22,8 @@ title = Riot is cutting back budget on esports?
 url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
+match = 0.0%%
+title = 
 url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
@@ -47,9 +47,9 @@ title = Over 1000 Companies Have Curtailed Operations in ...
 url = https://som.yale.edu/story/2022/over-1000-companies-have-curtailed-operations-russia-some-remain
 
 [www.reuters.com]
-match = -150.0%%
-title = China says it will not join Swiss peace conference on Ukraine
-url = https://www.reuters.com/world/china-will-not-join-swiss-peace-conference-ukraine-sources-say-2024-05-31/
+match = -140.0%%
+title = Dutch police disperse anti-lockdown protesters in Amsterdam
+url = https://www.reuters.com/business/media-telecom/dutch-police-disperse-thousands-protesting-against-lockdown-measures-2022-01-02/
 
 [esport1.hu]
 match = -135.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -110.0%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -160.0%%
+title = (Olympics) Confusion reigns after chaotic finish in short ...
+url = https://en.yna.co.kr/view/AEN20180213013100315
 
 [www.vlr.gg]
 match = 5.6%%
