CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-13 04:30:29
+lastsearch = 2024-07-13 11:31:12
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC67rmQVMM&sig=ACfU3U2nnkQNmyMOWY4f5pn7g-fbR_loeQ&hl=en&sa=X&ved=2ahUKEwjNwp-1uaKHAxVqEVkFHcFQAiwQ6AF6BAgXEAM
+match = -176.5%%
+title = A Greek-English Lexicon - Page 644 - Google Books Result
+url = https://books.google.com/books?id=-P1KAQAAMAAJ&pg=PA644&lpg=PA644&dq=man+in+hoa+dep+16&source=bl&ots=wqtByd1vIN&sig=ACfU3U2_4FL8Q7Me5K50SFszhluqsRjTow&hl=en&sa=X&ved=2ahUKEwi70pC6l6OHAxWMI0QIHXZnAS4Q6AF6BAgaEAM
 
 [tax.vermont.gov]
 match = -29.4%%
