--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-07-13 06:44:40
+lastsearch = 2024-07-13 11:37:15
 
 [demxanh.com]
 match = -60.9%%
@@ -28,8 +28,8 @@ url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 
 [www.diepxuan.com]
 match = 21.7%%
-title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
+title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
 
 [chieutrucsaigon.com]
 match = -13.0%%
@@ -37,9 +37,9 @@ title = TÌM HIỂU CHIẾU TRÚC CAO BẰNG BÁN TẠI SÀI GÒN
 url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/tim-hieu-chieu-truc-cao-bang-ban-tai-sai-gon-59.html
 
 [khodem.vn]
-match = 0.0%%
-title = Chiếu tre, trúc, điều hòa - Kho đệm
-url = https://khodem.vn/chieu-tre-truc-dieu-hoa/
+match = -56.5%%
+title = Chiếu trúc cây Cao Bằng Chiếu Việt Nam tốt nhất - Kho đệm
+url = https://khodem.vn/chieu-truc-cay-cao-bang/
 
 [chieutruccaobang.com.vn]
 match = 52.6%%
