--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-13 09:01:37
+lastsearch = 2024-07-13 11:36:25
 
 [www.riotgames.com]
 match = -84.0%%
@@ -39,7 +39,7 @@ url = https://www.bbc.co.uk/news/uk-68505383
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Names_of_Korea
+url = https://en.wikipedia.org/wiki/Joseon
 
 [kids.nationalgeographic.com]
 match = 0.0%%
