--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-12 21:49:12
+lastsearch = 2024-07-13 11:32:30
 
 [www.reddit.com]
 match = -82.6%%
@@ -440,4 +440,9 @@ url = https://notesplusultra.com/2017/05/24/hungry-in-hue-and-hoi-an/
 match = -26.7%%
 title = Board of Review
 url = https://maint.loc.gov/law/mlr/pdf/Board-of-Review_Vol-74.pdf
+
+[fonts.google.com]
+match = 4.3%%
+title = Google Fonts: Browse Fonts
+url = https://fonts.google.com/
 
