--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-13 11:45:21
+lastsearch = 2024-07-13 12:19:25
 
 [shopee.vn]
 match = -28.0%%
@@ -112,9 +112,9 @@ title = Lừa đảo xuất khẩu lao động, người đàn ông Đài Loan l
 url = https://congly.vn/lua-dao-xuat-khau-lao-dong-nguoi-dan-ong-dai-loan-linh-12-nam-tu-399654.html
 
 [trithucvn.co]
-match = -52.0%%
-title = 15 người Đài Loan vào Trung Quốc bị bắt giữ, 51 ...
-url = https://trithucvn.co/the-gioi/15-nguoi-dai-loan-vao-trung-quoc-bi-bat-giu-51-nguoi-bi-tham-van.html
+match = -68.0%%
+title = Thủ tướng Hungary Orban gặp cựu Tổng thống Mỹ Trump ...
+url = https://trithucvn.co/the-gioi/thu-tuong-hungary-orban-gap-cuu-tong-thong-my-trump-de-thao-luan-ve-su-menh-hoa-binh.html
 
 [www.klook.com]
 match = -56.0%%
