--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-13 00:30:15
+lastsearch = 2024-07-13 12:14:33
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -281.8%%
-title = Có bán Đệm giường đôi lớn tại Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/queen-mattresses/?locale=vi_VN
+match = -272.7%%
+title = Có bán Đệm giường đôi lớn tại Lakeville, Minnesota
+url = https://www.facebook.com/marketplace/109260755766991/queen-mattresses/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,8 +77,8 @@ title = Giường Mika Q(1.6m) Chân cao - 장인가구 - Nội Thất Hàn ...
 url = https://jangin.vn/shop/giuong-mika-q1-6m-chan-cao/
 
 [www.litera.com]
-match = -172.7%%
-title = Litera | Legal Technology Solutions
+match = 0.0%%
+title = 
 url = https://www.litera.com/
 
 [www.zinus.com]
