--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-13 08:04:20
+lastsearch = 2024-07-13 12:16:12
 
 [everonvn.com.vn]
 match = -77.8%%
@@ -33,8 +33,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [sieuthidemhanquoc.com.vn]
 match = 14.8%%
-title = Bộ chăn ga gối Everon ESM-19016
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-19016-1485
+title = Bộ chăn ga gối Everon EPM-19061
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-19061-1497
 
 [everonvietnam.com]
 match = 36.0%%
@@ -95,4 +95,9 @@ url = https://bonbonnyc.com/products/4oz-geisha
 match = -22.2%%
 title = Bosch Universal Plus Stand Mixer - Black
 url = https://forums.dansdeals.com/index.php?topic=110702.0
+
+[www.youtube.com]
+match = -33.3%%
+title = Aegean Leather Oversized Fountain Pen Case
+url = https://www.youtube.com/watch?v=ge-8pHMQi9Y
 
