--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-13 11:21:10
+lastsearch = 2024-07-13 12:12:22
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -231.2%%
-title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=YazaAAAAMAAJ&pg=RA6-PA58&lpg=RA6-PA58&dq=chieu+lac+soc+18&source=bl&ots=ChK68FvKZp&sig=ACfU3U2assFEthFj1vPheE3CiRoiu-hNEA&hl=en&sa=X&ved=2ahUKEwjDpNGh0qGHAxXWGTQIHeuZCk4Q6AF6BAgdEAM
+match = -193.8%%
+title = Từ điẻ̂n địa chí Bạc Liêu - Page 307 - Google Books Result
+url = https://books.google.com/books?id=GdKw75bQHZUC&pg=PA307&lpg=PA307&dq=chieu+lac+soc+18&source=bl&ots=hUKdpb9tZV&sig=ACfU3U3HyNluymxSzqa9ZlAfRMqewEg46Q&hl=en&sa=X&ved=2ahUKEwi4pv3ToKOHAxXZHEQIHZDSAtwQ6AF6BAgWEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
