--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-13 04:49:32
+lastsearch = 2024-07-13 12:20:24
 
 [www.maihuyencorp.com]
-match = -85.0%%
-title = Cửa hàng chiếu nhựa, mành, rèm, thảm uy tin tại Hà Nội
-url = https://www.maihuyencorp.com/shop
+match = -20.0%%
+title = Mai Huyền - Chiếu nhựa cao cấp - Hanoi
+url = https://www.maihuyencorp.com/
 
 [shopee.vn]
 match = -70.0%%
@@ -17,9 +17,9 @@ title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu/nhựa
 
 [tchome.vn]
-match = 20.0%%
-title = CHIẾU NHỰA HÀ NỘI 1 MÉT 2 - TC-HOME
-url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-1-met-2-sp22544.html
+match = 35.0%%
+title = CHIẾU NHỰA HÀ NỘI 1,8m - TC-HOME
+url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-18m-sp22546.html
 
 [tandaiphong.com.vn]
 match = 46.7%%
