--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-07-13 11:34:07
+lastsearch = 2024-07-13 12:18:13
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -12,9 +12,9 @@ title = Ga ni lông 2m x 2m2 - Điệp Xuân
 url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 
 [shopee.vn]
-match = -42.1%%
-title = GA CHỐNG THẤM 2M X 2M2 ( LOẠI 1 DÀY DẶN )
-url = https://shopee.vn/GA-CHỐNG-THẤM-2M-X-2M2-(-LOẠI-1-DÀY-DẶN-)-i.13475819.120666839
+match = -105.3%%
+title = BỘ CHĂN GA GỐI NỈ NHUNG HOẠT HÌNH - KHỦNG LONG ...
+url = https://shopee.vn/BỘ-CHĂN-GA-GỐI-NỈ-NHUNG-HOẠT-HÌNH-KHỦNG-LONG-HAPPY-i.109658051.4562850034
 
 [www.lazada.vn]
 match = -136.8%%
@@ -37,9 +37,9 @@ title = GA GIƯỜNG CHÍNH HÃNG LE.HOME Sz 1.5m x 2m= ...
 url = https://phuonghoangphat.com/ga-giuong-chinh-hang-le-home sz-1-5m-x-2m-120k-sz-1-8m-x-2m-135k-sz-2m2-x-2m-140k
 
 [suongtuyet.com]
-match = 5.3%%
-title = Ra (Ga) Chống Thấm - Đà Nẵng
-url = https://suongtuyet.com/ra-chong-tham
+match = 27.8%%
+title = Mền Băng Lông Mỏng
+url = https://suongtuyet.com/men-long-mong-men-ni-gia-re
 
 [tiki.vn]
 match = -115.8%%
@@ -94,7 +94,7 @@ url = https://www.kymdan.com/bai-viet/bang-gia-san-pham-kymdan
 [m.facebook.com]
 match = -115.8%%
 title = Chăn Ga Gối Lụa Tencel Cotton - Topper Nệm Cao Cấp H2N
-url = https://m.facebook.com/3964606653604959
+url = https://m.facebook.com/changagoih2n/photos/a.1218379331561052/3621438297921798/?type=3
 
 [www.lamido.vn]
 match = -26.3%%
@@ -125,4 +125,19 @@ url = https://www.gazettextra.com/sports/national/mcilroy-trying-to-move-on-from
 match = -121.1%%
 title = Đệm 2mx2m2, nệm 2m x 2m2 bông ép giá tốt nhất tháng 7
 url = https://ru9.vn/blogs/magazine/dem-bong-ep-2mx2m2
+
+[gumu.vn]
+match = -21.1%%
+title = Ga chống thấm giường 1.6m-2.2m - GUMU
+url = https://gumu.vn/ga-chong-tham-giuong-16m22m
+
+[h5.lazada.vn]
+match = -136.8%%
+title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
+url = https://h5.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729-s11297993017.html
+
+[pages.lazada.vn]
+match = -115.8%%
+title = Bộ Chăn Ga Gối Nỉ Nhung Cao Cấp N2204 (Gồm 1 Ga Bo ...
+url = https://pages.lazada.vn/products/bo-chan-ga-goi-ni-nhung-cao-cap-n2204-gom-1-ga-bo-chun-1-vo-men-2m2-2-ao-goi-50x70-i2032122041-s9474273657.html
 
