--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-13 06:44:07
+lastsearch = 2024-07-13 12:21:16
 
 [shopee.vn]
-match = -52.4%%
-title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường
+match = -57.1%%
+title = Thảm nhung trải sàn trải giường 1.8x2m và 1.6x2m
+url = https://shopee.vn/Thảm-nhung-trải-sàn-trải-giường-1.8x2m-và-1.6x2m-2x2.2m-hàng-loại-1-thảm-tấm-đủ-màu-i.6844632.773184193
 
 [khosibaclieu.com]
 match = -9.5%%
