CI images update

--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-13 04:50:02
+lastsearch = 2024-07-13 12:37:18
 
 [shopee.vn]
 match = -17.4%%
@@ -12,14 +12,14 @@ title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
 url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
 
 [www.facebook.com]
-match = 52.2%%
-title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/
+match = -30.4%%
+title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
+url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/
 
 [www.sendo.vn]
-match = -69.6%%
-title = Chiếu Cói Thái Bình Siêu Tốt, Giá Gốc, Thanh Toán Khi ...
-url = https://www.sendo.vn/chieu-coi-thai-binh.htm
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [trangvangvietnam.com]
 match = -87.0%%
@@ -70,4 +70,24 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
 match = -17.4%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
 url = https://h5.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
+
+[m.facebook.com]
+match = -13.0%%
+title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
+url = https://m.facebook.com/61553157173242/
+
+[chieu.com.vn]
+match = -117.4%%
+title = chieu-coi-thai-binh - Tổng kho Chiếu trúc chiếu cói rẻ nhất Hà ...
+url = http://chieu.com.vn/san-pham/chieu-coi-thai-binh-2mx2m2/chieu-coi-thai-binh/
+
+[www.lamchame.com]
+match = -47.8%%
+title = Màn Tuyn 10/10_chiếu Cói ,chiếu Nhựa Thái Bình Hàng ...
+url = https://www.lamchame.com/forum/threads/man-tuyn-10-10_chieu-coi-chieu-nhua-thai-binh-hang-loai-1.255109/
+
+[kitz.com.vn]
+match = -47.8%%
+title = Van 1 Chiều Nhựa PVC-UPVC-CPVC-PVDF - KITZ Seals
+url = https://kitz.com.vn/van-1-chieu-nhua
 
