--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-13 05:13:07
+lastsearch = 2024-07-13 12:35:31
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga gối Sông Hồng H16 043 ga chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16043-ga-chun.html
 
 [cuahangchangagoidem.com]
-match = -54.2%%
-title = 17 Bộ Chăn Ga Gối Tencel Chất Lượng Với Giá Tốt Nhất ...
-url = https://cuahangchangagoidem.com/bo-chan-ga-goi-tencel/
+match = -41.7%%
+title = Cửa Hàng Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [tiki.vn]
 match = 0.0%%
