--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-13 10:33:59
+lastsearch = 2024-07-13 12:30:09
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -43.5%%
-title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYp_c7S_P&sig=ACfU3U2ZkBYT6hB85Ac9PPxUs7NM4n6zPQ&hl=en&sa=X&ved=2ahUKEwiQiIXViqOHAxWvkokEHaEPBw8Q6AF6BAghEAM
+match = -39.1%%
+title = Vietnams historia - Google Books Result
+url = https://books.google.com/books?id=bWNxBgAAQBAJ&pg=PT213&lpg=PT213&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=i_SVamseTI&sig=ACfU3U02cQ62uTpVVJf_pAEP47R_XYPBYA&hl=en&sa=X&ved=2ahUKEwjq-fTQpKOHAxU9H0QIHWojBZUQ6AF6BAggEAM
 
 [www.travelweekly.com]
 match = -87.0%%
@@ -122,8 +122,8 @@ title = Trường Đại học Y Dược Thái Bình
 url = https://tbump.edu.vn/
 
 [www.reddit.com]
-match = -21.7%%
-title = How to pronounce Thai Binh. : r/Vietnamese
+match = 30.4%%
+title = How to pronounce Thai Binh.
 url = https://www.reddit.com/r/Vietnamese/comments/1d5d9f4/how_to_pronounce_thai_binh/
 
 [www.macom.com]
