--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-13 10:34:42
+lastsearch = 2024-07-13 12:34:33
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -127,9 +127,9 @@ title = Việt Nam ứng cử vào vị trí Thẩm phán Toà án Quốc tế v
 url = https://plo.vn/viet-nam-ung-cu-vao-vi-tri-tham-phan-toa-an-quoc-te-ve-luat-bien-post795699.html
 
 [www.qdnd.vn]
-match = -109.5%%
-title = Muôn nẻo Euro: Không có vé, hãy đến Fanzone Olympiapark
-url = https://www.qdnd.vn/the-thao/euro-2024/muon-neo-euro-khong-co-ve-hay-den-fanzone-olympiapark-781242
+match = -133.3%%
+title = Hà Nội tổ chức 31 trận địa bắn pháo hoa trong Ngày giải ...
+url = https://www.qdnd.vn/quoc-phong-an-ninh/quoc-phong-toan-dan/ha-noi-to-chuc-31-tran-dia-ban-phao-hoa-trong-ngay-giai-phong-thu-do-785179
 
 [baogialai.com.vn]
 match = -114.3%%
@@ -515,4 +515,9 @@ url = https://vietbao.com/a319517/yeu-thuong-lam-nao-bo-khoe-manh-va-song-tho
 match = -95.2%%
 title = Ghi nhận 126 trận động đất có độ lớn từ 2,5 đến 4,1 độ
 url = http://caobangtv.vn/tin-tuc-n74895/ghi-nhan-126-tran-dong-dat-co-do-lon-tu-25-den-41-do.html
+
+[www.binhduong.gov.vn]
+match = -128.6%%
+title = Công bố chất lượng Hệ thống thông tin giải quyết thủ tục ...
+url = https://www.binhduong.gov.vn/thong-tin-tuyen-truyen/2024/07/981-cong-bo-chat-luong-he-thong-thong-tin-giai-quyet-thu-tuc-hanh-chinh-cap-bo-cap-tin
 
