--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-13 09:43:21
+lastsearch = 2024-07-13 12:38:30
 
 [burningman.org]
 match = 0.0%%
@@ -154,7 +154,7 @@ url = https://boardofwatersupply.com/appjqsYgH7155
 [steamcommunity.com]
 match = -53.3%%
 title = Cộng đồng Steam :: Dawn of Man
-url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=196
+url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=10
 
 [register.fca.org.uk]
 match = -6.7%%
@@ -710,4 +710,9 @@ url = https://www.usnews.com/best-colleges/wayne-state-2329/applying
 match = -186.7%%
 title = LEGO Discovery Center Washington, D.C. Birthday Bash
 url = https://www.legodiscoverycenter.com/washington-dc/whats-inside/events/lego-discovery-center-washington-d-c-birthday-bash/
+
+[publicaccess.courts.state.mn.us]
+match = -166.7%%
+title = Minnesota Court Records Online (MCRO): Home Page
+url = https://publicaccess.courts.state.mn.us/
 
