--- a/images/nem-foam-dreamland-uc-200x220x20/config.ini
+++ b/images/nem-foam-dreamland-uc-200x220x20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-200x220x20.html
 lastopen = 2024-06-07 00:49:31
 
 [search]
-lastsearch = 2024-07-13 11:48:38
+lastsearch = 2024-07-13 12:35:53
 
 [www.diepxuan.com]
-match = 100.0%%
-title = Nệm Foam Dreamland Úc 200x220x20
-url = https://www.diepxuan.com/nem-foam-dreamland-uc-200x220x20.html
+match = 21.9%%
+title = Nệm Foam Nami 150x190x15 - Điệp Xuân
+url = https://www.diepxuan.com/nem-foam-nami-150x190x15.html
 
 [dreamfoambedding.com]
 match = -31.6%%
