--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-13 10:12:59
+lastsearch = 2024-07-13 12:36:48
 
 [www.tui.co.uk]
 match = 0.0%%
@@ -320,4 +320,9 @@ url = https://juliahuyserdesign.com/en-dz/collections/all/products/tui-earrings
 match = -316.7%%
 title = Contiki unveils new itineraries and sale on selected trips
 url = https://travelweekly.co.uk/news/tour-operators/contiki-unveils-new-itineraries-and-sale-on-selected-trips
+
+[www.travelandtourworld.com]
+match = -325.0%%
+title = TUI Airways' New Routes Increases Travel to Paris During ...
+url = https://www.travelandtourworld.com/news/article/tui-airways-new-routes-increases-travel-to-paris-during-olympics-with-26-partner-airlines-contributing-a-boost-in-travel-industry/
 
