--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-13 09:41:29
+lastsearch = 2024-07-13 12:48:22
 
 [demxanh.com]
 match = -42.9%%
@@ -152,9 +152,9 @@ title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -17.9%%
-title = Jürgen scheffler [UFCWRp] - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://torgi-space.ru/3567291rskinteriorruc4fe43y
+match = 3.6%%
+title = Hotels in Lebanon - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://startnewsinfo.ru/qohfbezucredfe99.html
 
 [news.google.it]
 match = -3.6%%
