--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-13 11:17:41
+lastsearch = 2024-07-13 12:45:12
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -17,13 +17,13 @@ title = 김가일 | Ga Kim - Coreano 🇰🇷 Fácil e Rápido (@gakim0)
 url = https://www.instagram.com/gakim0/?hl=en
 
 [www.reddit.com]
-match = -50.0%%
-title = Riot is cutting back budget on esports?
-url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
+match = -15.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
+match = -33.3%%
+title = Nam Joo-hyuk
 url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
@@ -134,7 +134,7 @@ url = https://wildrift.leagueoflegends.com/en-us/
 [books.google.com]
 match = -135.0%%
 title = The Japan Daily Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek1oDLkR&sig=ACfU3U0loESCb5RzXIHCi-PmNuLxpm0VAA&hl=en&sa=X&ved=2ahUKEwjjoPWY8qCHAxV5FFkFHfU2CrIQ6AF6BAgmEAM
+url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek2mGNgS&sig=ACfU3U12M-qOueJB2vEIsO9Nb-eiWa-Xcw&hl=en&sa=X&ved=2ahUKEwiLto3_p6OHAxXDg4kEHWU3AiAQ6AF6BAgZEAM
 
 [thehill.com]
 match = -105.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+match = -110.0%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.vlr.gg]
 match = 5.6%%
@@ -310,4 +310,14 @@ url = https://forkast.news/topic/enterprise/
 match = -6.2%%
 title = Original Article
 url = https://synapse.koreamed.org/articles/1119644
+
+[www.quora.com]
+match = 0.0%%
+title = 
+url = https://www.quora.com/Should-I-just-pronounce-네-as-DE-because-all-Koreans-say-it-like-that
+
+[liquipedia.net]
+match = -15.0%%
+title = Runeterra Reforged Championship
+url = https://liquipedia.net/tft/Runeterra_Reforged/Championship
 
