CI images update

--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-13 03:45:58
+lastsearch = 2024-07-13 13:38:17
 
 [shopee.vn]
 match = 25.0%%
@@ -99,7 +99,7 @@ url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/he-thong-ki
 [books.google.com]
 match = -231.2%%
 title = Tam tu kinh: ou, Le livre des phrases de trois caractères, ...
-url = https://books.google.com/books?id=So8wAAAAYAAJ&pg=RA3-PA14&lpg=RA3-PA14&dq=chieu+lac+soc+12&source=bl&ots=ihPPeTd872&sig=ACfU3U0opCCsgv1y79W8LHXZtFNWXOk3GA&hl=en&sa=X&ved=2ahUKEwixgPK7r6KHAxW8EFkFHZ61C5wQ6AF6BAgeEAM
+url = https://books.google.com/books?id=So8wAAAAYAAJ&pg=RA3-PA14&lpg=RA3-PA14&dq=chieu+lac+soc+12&source=bl&ots=ihPPeX8db0&sig=ACfU3U00dzSeLmN3quSumoYFml8MViFWIw&hl=en&sa=X&ved=2ahUKEwiUlfDts6OHAxUDFlkFHd7CC0YQ6AF6BAghEAM
 
 [baovinhlong.vn]
 match = -137.5%%
