--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-12 15:17:07
+lastsearch = 2024-07-13 13:42:10
 
 [tiki.vn]
 match = -138.9%%
@@ -38,8 +38,8 @@ url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-solid-edena-mau-358-chinh-ha
 
 [demxanh.com]
 match = -72.2%%
-title = Bộ ga chun Cotton chống thấm màu ghi nhạt
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
+title = Bộ ga chun Cotton chống thấm màu xanh đậm
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
 match = -61.1%%
@@ -72,9 +72,9 @@ title = Bộ drap phủ Everon RORBOT (160x200) Giá: 4.027.000 VNĐ
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-everon-rorbot-160x200-gia-4-027-000-vnd-sp202152.html
 
 [antbedding.com]
-match = -33.3%%
-title = Bộ Chăn Ga Gối Modal Cotton MC13
-url = https://antbedding.com/bo-chan-ga-goi-modal-cotton-mc13
+match = -38.9%%
+title = Bộ Chăn Ga Gối Tơ Tằm Cao Cấp HJ03
+url = https://antbedding.com/bo-chan-ga-goi-to-tam-cao-cap-hj03
 
 [www.mym.com.vn]
 match = -57.1%%
