--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-13 13:16:59
+lastsearch = 2024-07-13 13:41:15
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -102,9 +102,9 @@ title = PHIẾU AN TOÀN HÓA CHẤT
 url = https://www.merckmillipore.com/Web-ES-Site/es_ES/-/EUR/ShowDocument-File?ProductSKU=MDA_CHEM-104354&DocumentType=MSD&DocumentId=104354_SDS_VN_VI.PDF&DocumentUID=47184070&Language=VI&Country=VN&Origin=PDP
 
 [www.facebook.com]
-match = -35.7%%
-title = Nội thất nhựa đài loan thành phong | Ho Chi Minh City
-url = https://www.facebook.com/p/Nội-thất-nhựa-đài-loan-thành-phong-100063972462124/?locale=gn_PY
+match = 11.1%%
+title = CỘNG ĐỒNG TIÊU DÙNG MỸ PHẨM
+url = https://www.facebook.com/groups/2045451282406040/?locale=vi_VN
 
 [www.favri.org.vn]
 match = -10.7%%
