CI images update

--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-13 12:52:54
+lastsearch = 2024-07-13 13:48:41
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -94,7 +94,7 @@ url = https://baomoi.com/kham-pha-lang-nghe-det-chieu-lac-o-long-an-c48038158.ep
 [books.google.com]
 match = -187.5%%
 title = 10 Điều Tạo Nên Số Phận - Page 46 - Google Books Result
-url = https://books.google.com/books?id=gnsEEAAAQBAJ&pg=PA46&lpg=PA46&dq=chieu+lac+soc+10&source=bl&ots=2XqfYoy4Q_&sig=ACfU3U1xBzTW9BBgP5v-4O1yCo0pDHv41A&hl=en&sa=X&ved=2ahUKEwjfkZnk96GHAxUpLFkFHQt1BR0Q6AF6BAgjEAM
+url = https://books.google.com/books?id=gnsEEAAAQBAJ&pg=PA46&lpg=PA46&dq=chieu+lac+soc+10&source=bl&ots=2XqfYtz5R-&sig=ACfU3U1cWupck_nXhjOef_0jED4dKdqLvw&hl=en&sa=X&ved=2ahUKEwj2vdaXtqOHAxV2jIkEHR-kDLsQ6AF6BAgeEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
