--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-13 12:34:44
+lastsearch = 2024-07-13 13:50:15
 
 [everonvn.com.vn]
-match = -77.8%%
-title = Bảng giá bộ chăn ga gối Everon Ep 1636 (car) dành cho trẻ em
-url = https://everonvn.com.vn/everon/394/bo-everon-car
+match = -66.7%%
+title = Bảng Giá Bán Bộ Chăn Ga Gối Hàn Quốc Everon Est-19032 ...
+url = https://everonvn.com.vn/everon/742/bo-everon-est19032
 
 [everon.com.vn]
 match = 40.0%%
@@ -33,8 +33,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [sieuthidemhanquoc.com.vn]
 match = 14.8%%
-title = Bộ chăn ga gối Everon ESM-19016
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-19016-1485
+title = Bộ chăn ga gối Everon ESM-19015
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-19015-1484
 
 [everonvietnam.com]
 match = 36.0%%
