--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-13 12:34:33
+lastsearch = 2024-07-13 13:52:49
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -492,9 +492,9 @@ title = Tử vi con giáp tuần (8/7/2024 đến 14 ...
 url = https://2sao.vn/3-con-giap-danh-mat-van-may-tuong-lai-lao-doc-n-386007.html
 
 [tuoitre.vn]
-match = -123.8%%
-title = 6 tháng đầu năm, Bình Tân giải ngân trên 70%%, hơn gấp ...
-url = https://tuoitre.vn/6-thang-dau-nam-binh-tan-giai-ngan-tren-70-hon-gap-doi-chi-tieu-20240708184753086.htm
+match = -109.5%%
+title = Nắng nóng làm hư đường băng, sân bay quốc tế phải ...
+url = https://tuoitre.vn/nang-nong-lam-hu-duong-bang-san-bay-quoc-te-phai-dong-cua-20240713125214493.htm
 
 [websosanh.vn]
 match = -81.0%%
