--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-13 11:45:08
+lastsearch = 2024-07-13 13:46:49
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -23.5%%
-title = The Illustrated London News
-url = https://books.google.com/books?id=xaZPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+in+hoa+dep+16&source=bl&ots=jGA2OsPJBz&sig=ACfU3U3-jPYstbddSbcTp0GkQPmoA6B3BQ&hl=en&sa=X&ved=2ahUKEwi4qtrImqOHAxV5D1kFHRw5C8UQ6AF6BAg5EAM
+match = -176.5%%
+title = Toxic Substances: Hearings Before the Subcommittee on ...
+url = https://books.google.com/books?id=3CGt77qWkQ4C&pg=PA1345-IA5&lpg=PA1345-IA5&dq=man+in+hoa+dep+16&source=bl&ots=rRhVC4UU4H&sig=ACfU3U0nK2d1hCktG4Lv1qok6J7D53y-bw&hl=en&sa=X&ved=2ahUKEwiZuZvitaOHAxW7lokEHSGwCb4Q6AF6BAgUEAM
 
 [tax.vermont.gov]
 match = -29.4%%
