CI images update

--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-13 13:47:24
+lastsearch = 2024-07-13 14:28:39
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -32,9 +32,9 @@ title = Bộ chăn bốn mùa
 url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-chan-bon-mua/
 
 [everonvn.com.vn]
-match = 10.7%%
-title = Bảng giá bán lẻ chăn bốn mùa Everon
-url = https://everonvn.com.vn/51/chan-bon-mua-everon
+match = -32.1%%
+title = Đệm Bông Ép Vỏ Gấm Everon Giảm 20%% Hàng Chính Hãng
+url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon
 
 [changagoidemsonghong.com]
 match = -53.6%%
@@ -130,4 +130,9 @@ url = https://tiki.vn/search?q=chăn bốn mùa everon
 match = -83.3%%
 title = Chăn bốn mùa
 url = https://elambo.vn/chan-bon-mua/
+
+[www.booking.com]
+match = -64.3%%
+title = Studio Saint-Martin , 1 pièce, 3 personnes - FR-1-734-47
+url = https://www.booking.com/hotel/mf/studio-saint-martin-1-piece-3-personnes-fr-1-734-47.vi.html
 
