--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-13 13:22:29
+lastsearch = 2024-07-13 14:29:33
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -150.0%%
-title = TRỰC TIẾP | JOHN REBONG vs NGUYỄN QUANG HIỆP ...
-url = https://m.facebook.com/dichvugiaitribilliards/videos/-trực-tiếp-john-rebong-vs-nguyễn-quang-hiệp-vòng-loại-kkking-european-open-2024/3785081965143221/
+match = -181.2%%
+title = Riviu.vn | 👉 BỮA XẾ NO NÊ CHỈ TỪ 8K TẠI QUÁN ĂN VẶT ...
+url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1457660294897702/
 
 [www.sjcallahabad.org]
 match = -212.5%%
@@ -192,9 +192,9 @@ title = vb777 ️【WW88.game】Casino Trực Tuyến: Khi Châu Á ...
 url = http://www.tuyensinh.dau.edu.vn/rna/2024-06-16-happyvn com.xhtm
 
 [baolongan.vn]
-match = -125.0%%
-title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
-url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
+match = -112.5%%
+title = 'Ai về Cần Đước...'(*) - Báo Long An Online
+url = https://baolongan.vn/ai-ve-can-duoc--a178905.html
 
 [vi.wikipedia.org]
 match = 0.0%%
