--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-13 12:32:58
+lastsearch = 2024-07-13 14:25:27
 
 [shopee.vn]
 match = -171.4%%
@@ -12,14 +12,14 @@ title = [BẢO HÀNH 18 THÁNG] Màn Chụp Tự Bung Đỉnh Rộng ...
 url = https://shopee.vn/-BẢO-HÀNH-18-THÁNG-Màn-Chụp-Tự-Bung-Đỉnh-Rộng-Cao-Cấp-Màn-Đỉnh-Vuông-Hàng-Đẹp-Dày-Dặn-2m2_1m8_1m6-i.176591078.7737140981
 
 [mungthienmetta.com]
-match = -185.7%%
-title = {NEW2021} Mùng Ngủ METTA Tự Bung Thông Minh - 2 ...
-url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2021-mung-ngu-metta-tu-bung-thong-minh-2-met-vuong-mngu2m-vuong-xam-bh-18-thang.html
+match = -214.3%%
+title = 1.6M x 2M | Mùng Ngủ Tự Bung Dành Cho 2-4 Người (Đỏ ...
+url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/1-6m-x-2m-mung-ngu-tu-bung-danh-cho-2-4-nguoi-do-do-mngu-1m6-2m-chinh-hang.html
 
 [tiki.vn]
-match = -221.4%%
-title = Màn chụp tự bung đỉnh vuông, giá xưởng, hàng việt nam ...
-url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465914
+match = -207.1%%
+title = Màm tự bung em bé 80cm x 180cm hàng chính hãng, giao ...
+url = https://tiki.vn/search?q=màm tự bung em bé 80cm x 180cm
 
 [manthutrang.com]
 match = -200.0%%
@@ -58,8 +58,8 @@ url = https://demxanh.com/cach-su-dung-man-chup-tu-bung-cao-cap.html
 
 [www.mungtubung.com]
 match = -178.6%%
-title = Mùng chụp chống muỗi cao cấp Bảo Lộc | XEM NGAY
-url = https://www.mungtubung.com/
+title = Mùng chụp tự bung xếp gọn đủ kích thước và màu sắc
+url = https://www.mungtubung.com/mung-chup-tu-bung-xep-gon-cao-cap.html
 
 [munghoangphat.com]
 match = -150.0%%
