--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-13 11:19:35
+lastsearch = 2024-07-13 14:28:51
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 
 [songhongonline.vn]
 match = 0.0%%
-title = Bộ sản phẩm SH_BC22 058
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-058
+title = Bộ sản phẩm SH_BC22 061
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-061
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 26.5%%
-title = Bộ Chăn Ga Gối Tơ Tằm Cao Cấp HJ03
-url = https://antbedding.com/bo-chan-ga-goi-to-tam-cao-cap-hj03
+match = 23.5%%
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH09
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh09
 
 [shopee.vn]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
+title = Everon EPM-22072 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22072.html
 
 [everonchinhhang.vn]
 match = 0.0%%
@@ -72,9 +72,9 @@ title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
 url = https://songhong.info/chan-ga-goi-khong-chan-bc62
 
 [kona.com.vn]
-match = 41.2%%
-title = Bộ ga chần chăn 4 mùa Diamond 188 - kona
-url = https://kona.com.vn/products/bo-ga-chan-chan-4-mua-diamond-188
+match = 58.8%%
+title = Bộ ga chần chăn 4 mùa MOC 2 - kona
+url = https://kona.com.vn/products/bo-ga-chan-chan-4-mua-moc-2
 
 [www.everonvni.vn]
 match = 23.5%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022
 
 [tiki.vn]
 match = 41.2%%
