--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-16.html
 lastopen = 2024-06-09 22:26:33
 
 [search]
-lastsearch = 2024-07-13 09:50:11
+lastsearch = 2024-07-13 14:26:09
 
 [demxanh.com]
 match = -14.8%%
@@ -54,12 +54,12 @@ url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
 [hc.com.vn]
 match = -22.2%%
 title = 10 Cách Khắc Phục Điều Hòa Để 16 Độ Không Mát Hiệu ...
-url = https://hc.com.vn/ords/nnews/dieu-hoa-de-16-do-khong-mat
+url = https://hc.com.vn/ords/ni--dieu-hoa-de-16-do-khong-mat
 
 [www.lazada.vn]
 match = -14.8%%
-title = Chiếu Mây Điều Hòa Hàng Xuất Khẩu Cao Cấp,Đủ kích cỡ
-url = https://www.lazada.vn/products/chieu-may-soi-nho-dieu-hoa-chieu-dieu-hoa-16-x-19m-chieu-may-dieu-hoa-hang-xuat-khau-cao-capdu-kich-co-chieu-du-lich-chieu-an-com-chieu-trai-giuong-i2106465649.html
+title = [HCM]Chiếu Mây Điều Hòa Chiếu trúc Không Mát Bằng ...
+url = https://www.lazada.vn/products/hcmchieu-may-dieu-hoa-chieu-truc-khong-mat-bang-chieu-dieu-hoa-chieu-ngu-mua-he-16-m-i845998733.html
 
 [phatdatbinhthoi.com.vn]
 match = -14.8%%
