--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-13 11:35:24
+lastsearch = 2024-07-13 14:30:48
 
 [www.youtube.com]
 match = -110.0%%
@@ -12,9 +12,9 @@ title = KÊNH VTC16
 url = https://www.youtube.com/channel/UCZnhEIF8a5Uv4GMPwT6KafQ
 
 [www.voatiengviet.com]
-match = -92.0%%
-title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đường ...
-url = https://www.voatiengviet.com/a/7026996.html
+match = -68.0%%
+title = Đài Loan bắt giữ 8 người Việt Nam là lao động bỏ trốn
+url = https://www.voatiengviet.com/a/dai-loan-bat-giu-8-nguoi-viet-nam-la-lao-dong-bo-tron/7677699.html
 
 [daithuy.com]
 match = -92.0%%
