--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-13 02:32:26
+lastsearch = 2024-07-13 14:25:04
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -155,4 +155,9 @@ url = https://www.reno.gov/
 match = -190.0%%
 title = Cedar Rapids Public Library: Home
 url = https://www.crlibrary.org/
+
+[academic.oup.com]
+match = 0.0%%
+title = 
+url = https://academic.oup.com/book/24392/chapter/187344854
 
