--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-13 12:36:48
+lastsearch = 2024-07-13 14:29:13
 
 [www.tui.co.uk]
-match = 0.0%%
-title = Buy South Korean won
-url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
 match = -233.3%%
@@ -222,9 +222,9 @@ title = WestJet and AMFA to resolve agreement via Binding ...
 url = https://avitrader.com/2024/06/28/westjet-and-amfa-to-resolve-agreement-via-binding-arbitration/
 
 [www.tuimusement.com]
-match = -366.7%%
-title = Book Tickets for Experiences and Activities Worldwide | TUI ...
-url = https://www.tuimusement.com/us/
+match = -241.7%%
+title = Things to do in South Korea: Attractions and Tours
+url = https://www.tuimusement.com/uk/south-korea/c_90/
 
 [www.dixondirectional.com]
 match = -166.7%%
