--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-13 14:51:05
+lastsearch = 2024-07-13 15:51:59
 
 [everon.online]
 match = -7.4%%
@@ -12,8 +12,8 @@ title = Bộ Chăn Ga Gối Everon SR01 Chính Hãng
 url = https://everon.online/products/bo-everon-sr01
 
 [everonvn.com.vn]
-match = -81.5%%
-title = Bộ Chăn Ga Everon Est-21036 chất liệu Gỗ tổng hợp (Tencel ...
+match = -37.0%%
+title = Bộ Chăn Ga Everon Est-21036 chất liệu Gỗ tổng ...
 url = https://everonvn.com.vn/everon/2117/bo-everon-est-21036
 
 [tongdailyeveron.com.vn]
@@ -28,8 +28,8 @@ url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
 match = 18.5%%
-title = Bộ Chăn ga gối Everon EPM-21067
-url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
+title = Bộ chăn ga gối Everon EPC-21053
+url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
 
 [everonhn.com.vn]
 match = 33.3%%
