--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-13 14:27:02
+lastsearch = 2024-07-13 15:47:03
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = -4.5%%
+title = Thảm trải giường cao su non màu hồng
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -87,9 +87,9 @@ title = Thảm trải giường cao su non màu trắng
 url = https://thegioidemonline.com/tham-trai-giuong-cao-su-non-mau-trang.html
 
 [vn.my-best.com]
-match = -104.5%%
-title = Top 8 Giường Tầng Thông Minh đẹp và tốt nhất hiện nay ...
-url = https://vn.my-best.com/35793
+match = -100.0%%
+title = Top 10 Thảm Trải Sàn tốt nhất hiện nay (Tư vấn mua 2024)
+url = https://vn.my-best.com/37075
 
 [www.sendo.vn]
 match = -63.6%%
