--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-13 12:20:44
+lastsearch = 2024-07-13 15:46:33
 
 [www.diepxuan.com]
 match = 36.4%%
-title = Điệp Xuân Thảm giường Bode 160x200
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+title = Thảm giường nỉ 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
 match = -22.7%%
