--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-13 12:44:48
+lastsearch = 2024-07-13 16:31:21
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -193.8%%
-title = ĐI ĐỂ TRỞ VỀ 2 OFFICIAL | CHUYẾN ĐI CỦA NĂM | SOOBIN ...
-url = https://www.youtube.com/watch?v=XWhdbZ9-uGA
+match = -175.0%%
+title = MLBB | LẠC KEY VỀ VIỆT NAM, TỐP MỠ ĐỐI ĐẦU NGƯỜI ...
+url = https://www.youtube.com/watch?v=me0dvgGuCGs
 
 [tuyensinh247.com]
 match = -225.0%%
