--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-13 15:52:57
+lastsearch = 2024-07-13 16:27:31
 
 [burningman.org]
 match = -60.0%%
@@ -900,4 +900,14 @@ url = https://publicaccess.courts.state.mn.us/
 match = -153.3%%
 title = U.S. Soccer Official Website | USWNT & USMNT
 url = https://www.ussoccer.com/
+
+[fantendo.fandom.com]
+match = 0.0%%
+title = 
+url = https://fantendo.fandom.com/wiki/Mega_Man_12_(OwtheEdgehog)
+
+[www.reddit.com]
+match = -240.0%%
+title = If there's ever a Mega Man 12, what's the first thing you ...
+url = https://www.reddit.com/r/Megaman/comments/12sf10z/if_theres_ever_a_mega_man_12_whats_the_first/
 
