--- a/images/ruot-nem-warmdream-160x200x09/config.ini
+++ b/images/ruot-nem-warmdream-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-warmdream-160x200x09.html
 lastopen = 2024-06-11 23:30:20
 
 [search]
-lastsearch = 2024-07-13 15:14:53
+lastsearch = 2024-07-13 16:30:40
 
 [www.diepxuan.com]
 match = 58.6%%
@@ -17,9 +17,9 @@ title = body arrived in germany
 url = https://unofficialwarmoth.com/threads/body-arrived-in-germany.7742/
 
 [www.audioasylum.com]
-match = -108.3%%
-title = Vinyl Asylum
-url = https://www.audioasylum.com/cgi/vt.mpl?f=vinyl&m=1096095&VT=T
+match = -34.5%%
+title = Vinyl Asylum - Mounting an SME Model 10 tonearm
+url = https://www.audioasylum.com/cgi/vt.mpl?f=vinyl&m=1052622&VT=T
 
 [www.amazon.com]
 match = -17.2%%
@@ -40,4 +40,14 @@ url = https://db.audioasylum.com/mhtml/m.html?forum=vinyl&n=952944&highlight=car
 match = 6.9%%
 title = Don't Show, Just Tell | Page 4
 url = https://www.castironcollector.com/forum/threads/dont-show-just-tell.1599/page-4
+
+[www.youtube.com]
+match = -3.4%%
+title = Besam 12 08 005 Roller Steel Wheel
+url = https://www.youtube.com/watch?v=-h7S5zl83po
+
+[forums.timezone.com]
+match = -37.9%%
+title = Officine Panerai » Lack of a roller bearing...
+url = https://forums.timezone.com/index.php?t=msg&th=2431286&start=0
 
